[metadata]
name = fontforge_plugin_helper
version = 0.1.2
author = MihailJP
author_email = mihailjp@gmail.com
description = Common routines for Fontforge plugins
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MihailJP/fontforge-plugin-helper
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts

[options]
packages = fontforge_plugin_helper
python_requires = >=3.8
